[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "lmttfy"
version = "1.0"
description = "Python module that provides decorators to make a function execute in different thread or process"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0" }
authors = [{ name = "Casual Snek", email = "casualsnek@pm.me" }]
keywords = ["threading", "multiprocessing", "lmttfy"]
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
urls = { Repository = "https://github.com/casualsnek/lmttfy" }
dependencies = [
    "celery>=5.6.3",
    "redis>=7.4.0",
]


[tool.setuptools]
package-dir = { "" = "src" }
packages = { find = { where = ["src"] } }


[project.scripts]
lmttfy-defer-server = "lmttfy.defer_server:main"


[tool.pytest.ini_options]
filterwarnings = [
  'ignore:This process \(pid=\d+\) is multi-threaded, use of fork\(\):DeprecationWarning',
]

[dependency-groups]
dev = [
    "anyio>=4.13.0",
    "pytest>=9.0.3",
]
