[metadata]
name = lmttfy
version = 1.0
description = Python module that provides decorators to make a function execute in different thread or process
long_description = file: README.md
long_description_content_type = text/markdown
author = Casual Snek
author_email = casualsnek@pm.me
url = https://github.com/casualsnek/lmttfy
keywords = threading, multiprocessing, casualsnek, lmttfy, thread, process
license = GPL-3.0 License 

[options]
package_dir=
    =src
python_requires = >= 3.0
packages = find:
include_package_data = True

[options.packages.find]
where=src
